--- a/.github/workflows/build_examples.yml
+++ b/.github/workflows/build_examples.yml
@@ -21,6 +21,7 @@ jobs:
       - name: check content of *.deb package
         working-directory: build_example_3
         run: |
+          echo "Default branch is $default-branch"
           CMAKE_PROJECT_VERSION=$(cmake --system-information | awk -F= '$1~/CMAKE_PROJECT_VERSION:STATIC/{print$2}')
           CMAKE_SYSTEM_NAME=$(cmake -N --system-information | grep "CMAKE_SYSTEM_NAME \"" | cut -d\" -f2)
           DEBIAN_PACKAGE_FILENAME="example_3-${CMAKE_PROJECT_VERSION}-${CMAKE_SYSTEM_NAME}.deb"
