--- a/.github/workflows/build_examples.yml
+++ b/.github/workflows/build_examples.yml
@@ -29,6 +29,7 @@ jobs:
           dpkg -c ${DEBIAN_PACKAGE_FILENAME}
           echo "DEBIAN_PACKAGE_FILENAME=${DEBIAN_PACKAGE_FILENAME}" >> $GITHUB_OUTPUT
       - name: Release
+        working-directory: build_example_3
         uses: softprops/action-gh-release@v2
         ## if: startsWith(github.ref, 'refs/tags/')
         with:
