--- a/.github/workflows/build_examples.yml
+++ b/.github/workflows/build_examples.yml
@@ -29,11 +29,11 @@ jobs:
           dpkg -c ${DEBIAN_PACKAGE_FILENAME}
           echo "DEBIAN_PACKAGE_FILENAME=${DEBIAN_PACKAGE_FILENAME}" >> $GITHUB_OUTPUT
       - name: Release
-        working-directory: build_example_3
         uses: softprops/action-gh-release@v2
         ## if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: ${{ steps.check-packages.outputs.DEBIAN_PACKAGE_FILENAME }}
+          files: |
+            build_example_3/${{ steps.check-packages.outputs.DEBIAN_PACKAGE_FILENAME }}
           token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
           tag_name: latest
 # TODO: check https://github.com/marketplace/actions/cmake-swiss-army-knife
