--- a/.github/workflows/build_examples.yml
+++ b/.github/workflows/build_examples.yml
@@ -24,7 +24,9 @@ jobs:
         run: |
           CMAKE_PROJECT_VERSION=$(cmake --system-information | awk -F= '$1~/CMAKE_PROJECT_VERSION:STATIC/{print$2}')
           CMAKE_SYSTEM_NAME=$(cmake -N --system-information | grep "CMAKE_SYSTEM_NAME \"" | cut -d\" -f2)
-          DEBIAN_PACKAGE_FILENAME="example_3-${CMAKE_PROJECT_VERSION}-${CMAKE_SYSTEM_NAME}.deb"
+          PACKAGE_NAME="example_3-${CMAKE_PROJECT_VERSION}-${CMAKE_SYSTEM_NAME}"
+          DEBIAN_PACKAGE_FILENAME="${PACKAGE_NAME}.deb"
+          RPM_PACKAGE_FILENAME="${PACKAGE_NAME}.rpm"
           echo "Checking content of '$DEBIAN_PACKAGE_FILENAME'" 
           dpkg -c ${DEBIAN_PACKAGE_FILENAME}
           echo "DEBIAN_PACKAGE_FILENAME=${DEBIAN_PACKAGE_FILENAME}" >> $GITHUB_OUTPUT
@@ -34,6 +36,7 @@ jobs:
         with:
           files: |
             build_example_3/${{ steps.check-packages.outputs.DEBIAN_PACKAGE_FILENAME }}
+            build_example_3/${{ steps.check-packages.outputs.RPM_PACKAGE_FILENAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: latest
 # TODO: check https://github.com/marketplace/actions/cmake-swiss-army-knife
