test Ci feature

--- a/.github/workflows/build_examples.yml
+++ b/.github/workflows/build_examples.yml
@@ -27,6 +27,7 @@ jobs:
           PACKAGE_NAME="example_3-${CMAKE_PROJECT_VERSION}-${CMAKE_SYSTEM_NAME}"
           DEBIAN_PACKAGE_FILENAME="${PACKAGE_NAME}.deb"
           RPM_PACKAGE_FILENAME="${PACKAGE_NAME}.rpm"
+          echo "RPM filenme is ${RPM_PACKAGE_FILENAME}"
           echo "Checking content of '$DEBIAN_PACKAGE_FILENAME'" 
           dpkg -c ${DEBIAN_PACKAGE_FILENAME}
           echo "DEBIAN_PACKAGE_FILENAME=${DEBIAN_PACKAGE_FILENAME}" >> $GITHUB_OUTPUT
