--- a/.github/workflows/build_examples.yml
+++ b/.github/workflows/build_examples.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           files: |
             build_example_3/${{ steps.check-packages.outputs.RPM_PACKAGE_FILENAME }}
-            build_example_3/${{ steps.check-packages.outputs.DEBIAN_PACKAGE_FILENAME }}
+          # build_example_3/${{ steps.check-packages.outputs.DEBIAN_PACKAGE_FILENAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: latest
 # TODO: check https://github.com/marketplace/actions/cmake-swiss-army-knife
