--- a/library_1/CMakeLists.txt
+++ b/library_1/CMakeLists.txt
@@ -2,16 +2,21 @@ cmake_minimum_required(VERSION 3.29)
 
 project(library_1 VERSION 1.0.0 LANGUAGES CXX DESCRIPTION "my description")
 
-add_library(${PROJECT_NAME} SHARED)
+# This option changes the implicit behavior of CMake
+# See https://cmake.org/cmake/help/latest/variable/BUILD_SHARED_LIBS.html
+option(BUILD_SHARED_LIBS "Build as shared library" ON)
+
+add_library(${PROJECT_NAME})
 add_library(demo::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 # add_library(MyStuff SHARED source1.cpp ...)
 set_target_properties(${PROJECT_NAME} PROPERTIES
     VERSION 2.0.0
     SOVERSION 2
-    # This is for the Windows platform. 
+
+    # This is for the Windows platform.
     # Check Craig Scott "Professional CMake", Chapter "Shared Library Versioning"
-    DLL_NAME_WITH_SOVERSION TRUE 
+    DLL_NAME_WITH_SOVERSION TRUE
 )
 
 target_sources(${PROJECT_NAME}
