--- a/example_5/CMakeLists.txt
+++ b/example_5/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required(VERSION 3.29)
 project(example_5 VERSION 1.0.0 LANGUAGES CXX)
 
 add_executable(${PROJECT_NAME}
-    src/features.cpp
+    src/consume_class_with_interface.cpp
+    src/consume_class_that_adheres_to_concept.cpp
     src/main.cpp
 )
 
