--- a/example_5/CMakeLists.txt
+++ b/example_5/CMakeLists.txt
@@ -10,3 +10,6 @@ add_executable(${PROJECT_NAME}
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_23)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
+
+enable_testing()
+add_subdirectory(test)
