--- a/polymorphism/CMakeLists.txt
+++ b/polymorphism/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.29)
 
 project(polymorphism VERSION 1.0.0 LANGUAGES CXX)
 
+option(POLYMORPHISM_ENABLE_TESTING "enable testing for polymorphism" ${PROJECT_IS_TOP_LEVEL})
+
 add_executable(${PROJECT_NAME}
     src/consume_class_with_interface.cpp
     src/consume_class_that_adheres_to_concept.cpp
@@ -11,5 +13,7 @@ add_executable(${PROJECT_NAME}
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_23)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 
-enable_testing()
-add_subdirectory(test)
+if(POLYMORPHISM_ENABLE_TESTING)
+    enable_testing()
+    add_subdirectory(test)
+endif()
