refine test code build

--- a/polymorphism/test/CMakeLists.txt
+++ b/polymorphism/test/CMakeLists.txt
@@ -9,15 +9,24 @@ FetchContent_Declare(ut
 )
 FetchContent_MakeAvailable(ut)
 
-add_executable(test_consume
-    test_consume.cpp
+add_library(polymorphism_lib
     ../src/consume_class_that_adheres_to_concept.cpp
     ../src/consume_class_with_interface.cpp
 )
 
+target_compile_features(polymorphism_lib PUBLIC cxx_std_23)
+target_include_directories(polymorphism_lib PUBLIC ../include)
+
+add_executable(test_consume
+    test_consume.cpp
+)
+
 target_compile_features(test_consume PUBLIC cxx_std_23)
+
 target_include_directories(test_consume PUBLIC ../include)
 target_include_directories(test_consume PUBLIC "${ut_SOURCE_DIR}")
+
+target_link_libraries(test_consume PRIVATE polymorphism_lib)
 
 add_test(
     NAME test_consume
