--- a/polymorphism/CMakeLists.txt
+++ b/polymorphism/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(${PROJECT_NAME}
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_23)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 if(POLYMORPHISM_ENABLE_TESTING)
     enable_testing()
