change include directory config to PRIVATE

--- a/polymorphism/CMakeLists.txt
+++ b/polymorphism/CMakeLists.txt
@@ -12,9 +12,12 @@ add_executable(${PROJECT_NAME}
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_23)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 if(POLYMORPHISM_ENABLE_TESTING)
+    message(STATUS "Polymorphism testing enabled")
     enable_testing()
     add_subdirectory(test)
+else()
+    message(STATUS "Polymorphism testing disabled")
 endif()
